--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "styled-components":"6.14.6"
   },
   "scripts": {
     "start": "react-scripts start",
